<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddPassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_kodni_kiriting"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/number_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_kodni_kiriting"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raqamiga_yubordik"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:layout_marginTop="5dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_kod"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/add_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:layout_marginTop="20dp"
        />

</LinearLayout>