<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddNumber"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xush_kelibsiz"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avtorizatsiyadan_o_tish_uchun_telefon_raqamingizni_kiriting"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="normal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefon_raqamingiz"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/edt_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:inputType="phone"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:backgroundTint="#FCB600"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cornerRadius="10dp"
        android:layout_marginTop="30dp"
        />

</LinearLayout>